Примеры по 2-му занятию

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>l01-helloworld</module>
+        <module>l02-basic</module>
     </modules>
 
     <properties>
@@ -53,6 +54,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${com.google.guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.6.2</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
