--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>l02-basic</module>
         <module>l03-generics</module>
         <module>l04-gc</module>
+        <module>l05-simple</module>
+        <module>l05-tests</module>
     </modules>
 
     <properties>
