--- a/l04-gc/pom.xml
+++ b/l04-gc/pom.xml
@@ -13,4 +13,12 @@
 
   <artifactId>l04-gc</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
