примеры к занятию 8 (reflection)

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>l06-sample</module>
         <module>l07-java8</module>
         <module>l08-java8</module>
+        <module>l08-reflections</module>
     </modules>
 
     <properties>
