--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>l07-java8</module>
         <module>l08-java8</module>
         <module>l08-reflections</module>
+        <module>l09-annotation</module>
     </modules>
 
     <properties>
