Пример к занятию 11 (Serialization)

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>l09-annotation</module>
         <module>l10-remoteDebug</module>
         <module>l10-byteCode</module>
+        <module>l11-serialization</module>
     </modules>
 
     <properties>
@@ -43,6 +44,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--region plugins-->
         <com.google.guava.version>28.2-jre</com.google.guava.version>
+        <javax.json.version>1.1.4</javax.json.version>
+        <protobuf.version>3.11.4</protobuf.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -57,6 +60,12 @@
 
         <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
         <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
+
+        <!--region BOMs -->
+        <spring-boot.version>2.3.3.RELEASE</spring-boot.version>
+        <!--endregion-->
+
+        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -71,6 +80,24 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.6.2</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.json</artifactId>
+                <version>${javax.json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>${protobuf.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
