--- a/l12-solid/pom.xml
+++ b/l12-solid/pom.xml
@@ -12,4 +12,18 @@
 
     <artifactId>l12-solid</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+    </dependencies>
+
+
 </project>
