--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
         <module>l11-serialization</module>
         <module>l12-solid</module>
         <module>l13-jdbc</module>
-        <module>l14-hibernate</module>
         <module>l14-fetch</module>
         <module>l14-myBatis</module>
+        <module>l15-threads</module>
     </modules>
 
     <properties>
