16 занятие Многопоточная разработка ч2

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>l14-fetch</module>
         <module>l14-myBatis</module>
         <module>l15-threads</module>
+        <module>l16-executors</module>
     </modules>
 
     <properties>
