--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>l14-myBatis</module>
         <module>l15-threads</module>
         <module>l16-executors</module>
+        <module>l17-spring-start</module>
     </modules>
 
     <properties>
