--- a/l17-spring/spring-exercise/pom.xml
+++ b/l17-spring/spring-exercise/pom.xml
@@ -16,5 +16,16 @@
 
     <dependencies>
         <!-- TODO: Добавьте зависимость spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.11.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 </project>
